added configuration web client

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.password=password
 spring.jpa.generate-ddl=true
 springdoc.swagger-ui.path=/salary-calculator-api-doc.html
 server.port=8081
+spring.application.name=pension-zus
