--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,12 @@ spring.datasource.url=jdbc:postgresql://192.168.56.100:5432/
 spring.datasource.username=postgres
 spring.datasource.password=password
 spring.jpa.generate-ddl=true
-springdoc.swagger-ui.path=/salary-calculator-api-doc.html
 server.port=8081
 spring.application.name=pension-zus
+springdoc.swagger-ui.path=/pensionZus/pension-zus-api-doc.html
+management.endpoints.web.base-path=/pensionZus/actuator
+management.endpoints.web.exposure.include=*
+info.app.name=Pension Zus
+info.app.description=The microservice calculates the pension zus amount
+info.app.version=1.0.0
+management.info.env.enabled=true
