added spring admin

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,10 @@ spring.jpa.generate-ddl=true
 server.port=8081
 spring.application.name=pension-zus
 springdoc.swagger-ui.path=/pensionZus/pension-zus-api-doc.html
-management.endpoints.web.base-path=/pensionZus/actuator
 management.endpoints.web.exposure.include=*
 info.app.name=Pension Zus
 info.app.description=The microservice calculates the pension zus amount
 info.app.version=1.0.0
 management.info.env.enabled=true
+management.endpoints.web.base-path=/pensionZus/actuator/
+eureka.instance.health-check-url-path=/pensionZus/actuator/health
