--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.password=password
 spring.jpa.generate-ddl=true
 server.port=8081
 spring.application.name=pension-zus
-springdoc.swagger-ui.path=/pensionZus/pension-zus-api-doc.html
+springdoc.api-docs.path=/pensionZus/v3/api-docs
 management.endpoints.web.exposure.include=*
 info.app.name=Pension Zus
 info.app.description=The microservice calculates the pension zus amount
@@ -13,3 +13,4 @@ info.app.version=1.0.0
 management.info.env.enabled=true
 management.endpoints.web.base-path=/pensionZus/actuator/
 eureka.instance.health-check-url-path=/pensionZus/actuator/health
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
