--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,4 @@ management.info.env.enabled=true
 management.endpoints.web.base-path=/pension-zus/actuator/
 eureka.instance.health-check-url-path=/pension-zus/actuator/health
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+server.forward-headers-strategy=NATIVE
